Fixed a bug where clicking the text of a role would cause the view to jump to the top (thanks Obada)

--- a/app/assets/stylesheets/applications.css.scss
+++ b/app/assets/stylesheets/applications.css.scss
@@ -124,6 +124,10 @@
       margin: 3px 3px 5px;
       list-style-type: none;
       cursor: pointer;
+      
+      a {
+        pointer-events: none;
+      }
 
       a:hover {
         text-decoration: inherit;
